Added stationary light to transformation viewer.

--- a/demos/TransformationViewer.html
+++ b/demos/TransformationViewer.html
@@ -88,77 +88,82 @@
             ];
 
         // Scene objects
-		    scene.add(new THREE.AxisHelper());
+	    scene.add(new THREE.AxisHelper());
 
-        	var basicMaterial = new Shader("transformation", "transformation", {
-        	    roughness : {type: 'f', value: 0.83 },
-        	    theta : {type: 'f', value: 0.0 },
-        	    ltc_Minv : {type: 't', value: brdfList[0].mat},
-        	    ltc_Amp : {type: 't', value: brdfList[0].amp},
-        	    norm: {type: 'f', value: 0.0 }
-        	});
+	var basicMaterial = new Shader("transformation", "transformation", {
+	    roughness : {type: 'f', value: 0.83 },
+	    theta : {type: 'f', value: 0.0 },
+	    ltc_Minv : {type: 't', value: brdfList[0].mat},
+	    ltc_Amp : {type: 't', value: brdfList[0].amp},
+	    norm: {type: 'f', value: 0.0 }
+	});
 
-        	var transformedMaterial = new Shader("transformation", "transformation", {
-        	    roughness : {type: 'f', value: 0.83 },
-        	    theta : {type: 'f', value: 0.0 },
-        	    ltc_Minv : {type: 't', value: brdfList[0].mat},
-        	    ltc_Amp : {type: 't', value: brdfList[0].amp},
-        	    norm: {type: 'f', value: 1.0 }
-        	})
+	var transformedMaterial = new Shader("transformation", "transformation", {
+	    roughness : {type: 'f', value: 0.83 },
+	    theta : {type: 'f', value: 0.0 },
+	    ltc_Minv : {type: 't', value: brdfList[0].mat},
+	    ltc_Amp : {type: 't', value: brdfList[0].amp},
+	    norm: {type: 'f', value: 1.0 }
+	})
 
-        	var squareFunc = function(u, v) {
-        	    return new THREE.Vector3(u,v, 0);
-        	};
+	var squareFunc = function(u, v) {
+	    return new THREE.Vector3(u,v, 0);
+	};
 
-        	var vertSubdivisions = 500;
-        	var horiSubdivisions = 500;
-        	var polygonFunc = squareFunc;
-        	var polygonGeometry = new THREE.ParametricGeometry(polygonFunc, horiSubdivisions, vertSubdivisions);
+	var vertSubdivisions = 500;
+	var horiSubdivisions = 500;
+	var polygonFunc = squareFunc;
+	var polygonGeometry = new THREE.ParametricGeometry(polygonFunc, horiSubdivisions, vertSubdivisions);
 
-        	var sphereFunc = function(u, v) {
-        	    var phi = v * 2 * Math.PI ;
-        	    var theta = u * Math.PI;
+	var sphereFunc = function(u, v) {
+	    var phi = v * 2 * Math.PI ;
+	    var theta = u * Math.PI;
 
-        	    var z = Math.cos(phi);
-        	    var x = z * Math.sin(phi) * Math.cos(theta);
-        	    var y = z * Math.sin(phi) * Math.sin(theta);
-        	    z = z * z;
+	    var z = Math.cos(phi);
+	    var x = z * Math.sin(phi) * Math.cos(theta);
+	    var y = z * Math.sin(phi) * Math.sin(theta);
+	    z = z * z;
 
-        	    return new THREE.Vector3(x, y, z);
-        	};
+	    return new THREE.Vector3(x, y, z);
+	};
 
-        	var sphereGeometry = new THREE.ParametricGeometry(sphereFunc, 10, 300);
-        	sphereGeometry.computeVertexNormals();
-        	var sphereMaterial = new THREE.MeshLambertMaterial({color: 0x777777, side: THREE.DoubleSide});
-        	var sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
-        	var sphere2 = new THREE.Mesh(sphereGeometry, sphereMaterial);
-        	sphere.rotation.set(-Math.PI / 2.0, 0.0, 0.0);
-        	sphere2.rotation.set(-Math.PI / 2.0, 0.0, 0.0);
-        	scene.add(sphere);
- 
-         	var square = new THREE.Mesh(polygonGeometry, basicMaterial.material);
-        	square.position.set(-2, 2, 0);
-        	square.rotation.set(0, -Math.PI/2, 0);
-        	scene.add(square);
-        	square.updateMatrixWorld();
+	var sphereGeometry = new THREE.ParametricGeometry(sphereFunc, 10, 300);
+	var sphereMaterial = new THREE.MeshLambertMaterial({color: 0x777777, side: THREE.DoubleSide});
+	var sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
+	var sphere2 = new THREE.Mesh(sphereGeometry, sphereMaterial);
+	sphere.rotation.set(-Math.PI / 2.0, 0.0, 0.0);
+	sphere2.rotation.set(-Math.PI / 2.0, 0.0, 0.0);
+	scene.add(sphere);
 
-        	var square2 = new THREE.Mesh(polygonGeometry, transformedMaterial.material);
-        	square2.position.set(-2, 2, 0);
-        	square2.rotation.set(0, -Math.PI/2, 0);
-        	scene.add(square2);
-        	square2.updateMatrixWorld();
+		var squareOriginal = new THREE.Mesh(polygonGeometry, sphereMaterial);
+	squareOriginal.position.set(-2, 2, 0);
+	squareOriginal.rotation.set(0, -Math.PI/2, 0);
+	scene.add(squareOriginal);
+	squareOriginal.updateMatrixWorld();
 
-        	var lineGeometry = new THREE.Geometry();
-        	lineGeometry.vertices.push((new THREE.Vector3(0, 0, 0)).applyMatrix4(square.matrixWorld));
-        	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
-        	lineGeometry.vertices.push((new THREE.Vector3(0, 1, 0)).applyMatrix4(square.matrixWorld));
-        	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
-        	lineGeometry.vertices.push((new THREE.Vector3(1, 0, 0)).applyMatrix4(square.matrixWorld));
-        	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
-        	lineGeometry.vertices.push((new THREE.Vector3(1,1,0)).applyMatrix4(square.matrixWorld));
-        	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
-        	var lines = new THREE.LineSegments(lineGeometry, basicMaterial.material);
-        	scene.add(lines);
+ 	var square = new THREE.Mesh(polygonGeometry, basicMaterial.material);
+	square.position.set(-2, 2, 0);
+	square.rotation.set(0, -Math.PI/2, 0);
+	scene.add(square);
+	square.updateMatrixWorld();
+
+	var square2 = new THREE.Mesh(polygonGeometry, transformedMaterial.material);
+	square2.position.set(-2, 2, 0);
+	square2.rotation.set(0, -Math.PI/2, 0);
+	scene.add(square2);
+	square2.updateMatrixWorld();
+
+	var lineGeometry = new THREE.Geometry();
+	lineGeometry.vertices.push((new THREE.Vector3(0, 0, 0)).applyMatrix4(square.matrixWorld));
+	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
+	lineGeometry.vertices.push((new THREE.Vector3(0, 1, 0)).applyMatrix4(square.matrixWorld));
+	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
+	lineGeometry.vertices.push((new THREE.Vector3(1, 0, 0)).applyMatrix4(square.matrixWorld));
+	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
+	lineGeometry.vertices.push((new THREE.Vector3(1,1,0)).applyMatrix4(square.matrixWorld));
+	lineGeometry.vertices.push(new THREE.Vector3(0,0,0));
+	var lines = new THREE.LineSegments(lineGeometry, basicMaterial.material);
+	scene.add(lines);
         
         function updateScene()
         {
@@ -180,6 +185,12 @@
 
         var prev;
         function setupGUI() {
+	
+			var updateUniforms = function(param, obj) {
+                square.material.uniforms[param] = obj;
+                square2.material.uniforms[param] = obj;
+            };
+
             var gui = new dat.GUI({
                 height: 5 * 32 - 1
             });
@@ -187,28 +198,20 @@
             var params = {
                 brdf: 0,
                 roughness: 0.83,
-                theta: 0.001,
-                normalize: false, 
-                reset: function() {
-                    resetDefaults();
-                }
+                theta: 0.001
             }
 
             gui.add(params, 'brdf', brdfTypes).onChange(function(b) {
-                basicMaterial.material.uniforms["ltc_Minv"] = {type: 't', value: brdfList[b].mat };
-                basicMaterial.material.uniforms["ltc_Amp"] = {type: 't', value: brdfList[b].amp };
-                transformedMaterial.material.uniforms["ltc_Minv"] = {type: 't', value: brdfList[b].mat };
-                transformedMaterial.material.uniforms["ltc_Amp"] = {type: 't', value: brdfList[b].amp };
+				updateUniforms("ltc_Minv", {type: 't', value: brdfList[b].mat });
+				updateUniforms("ltc_Amp", {type: 't', value: brdfList[b].amp });
             });
 
             gui.add(params, "roughness", 0.0, 1.0).onChange(function(r) {
-                square.material.uniforms["roughness"] = {type: 'f', value: r };
-                square2.material.uniforms["roughness"] = {type: 'f', value: r };
+				updateUniforms("roughness", {type: 'f', value: r });
             });
 
             gui.add(params, "theta", 0.0, (Math.PI / 2.0)).onChange(function(t) {
-                square.material.uniforms["theta"] = {type: 'f', value: t };
-                square2.material.uniforms["theta"] = {type: 'f', value: t };
+				updateUniforms("theta", {type: 'f', value: t });
             });
         }
 
