--- a/demos/MERL_AreaLight.html
+++ b/demos/MERL_AreaLight.html
@@ -5,7 +5,7 @@
 		<title>MERL Area Light Renderer</title>
         <style> 
             body {
-				color: #000;
+				color: #fff;
 				font-family:Monospace;
 				font-size:30px;
 				text-align:center;
